[package]
name = "xx-mpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
num-traits = "0.2.17"
paste = "1.0.14"
enumflags2 = "0.7.8"
num-derive = "0.4.1"
ffmpeg-sys-next = { version = "6.0.1", features = ["avcodec", "avfilter", "swresample"] }
opus = "0.3.0"
bitreader = "0.3.8"
xx-core = { path = "../xx-core" }
xx-pulse = { path = "../xx-pulse" }
xx-url = { path = "../xx-url" }
xx-mpeg-macros = { path = "macros" }
